classDiagram
    class DreamineButton {
        +ButtonStyle Style
        +bool IsLoading
        +IRelayCommand Command
    }
    class DreamineTextBox {
        +string Watermark
        +bool HasError
        +string ErrorMessage
        +bool IsReadOnly
    }
    class DreamineComboBox {
        +string Watermark
        +bool IsSearchable
        +object SelectedItem
    }
    class DreamineDataGrid {
        +bool AutoGenerateColumns
        +bool IsVirtualized
        +int PageSize
        +int CurrentPage
    }
    class DreamineTreeView {
        +bool LazyLoad
        +IRelayCommand LoadChildrenCommand
        +object SelectedNode
    }
    class DreamineTabControl {
        +bool IsCloseable
        +bool IsDraggable
        +IRelayCommand CloseTabCommand
    }
    class DreamineProgressBar {
        +bool IsIndeterminate
        +string Label
        +double Value
    }
    Control <|-- DreamineButton
    Control <|-- DreamineTextBox
    Control <|-- DreamineComboBox
    Control <|-- DreamineDataGrid
    Control <|-- DreamineTreeView
    Control <|-- DreamineTabControl
    Control <|-- DreamineProgressBar